<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_6B6464"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bt_takePhoto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/takePhoto"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@drawable/toolbar_gr" />

    <TextView
        android:id="@+id/bt_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/photo"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/c_333333" />

    <TextView
        android:id="@+id/bt_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />
</LinearLayout>