<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/white"
        android:layout_width="@dimen/dp_335"
        android:layout_height="@dimen/dp_120">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<ImageView
    android:layout_width="@dimen/dp_120"
    android:layout_height="@dimen/dp_120"
    android:id="@+id/img"
    android:src="@mipmap/ic_launcher"
    />
    <TextView
        android:layout_width="@dimen/dp_44"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:text="呵呵"
        android:textSize="@dimen/sp_22"
        android:layout_toRightOf="@id/img"
        android:textColor="@color/c_333333"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginLeft="@dimen/dp_17"
        />
    <TextView
        android:id="@+id/guanzhu"
        android:layout_width="@dimen/dp_61"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:layout_below="@+id/tv_name"
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_toRightOf="@id/img"
        android:text="@string/guan"/>
    <ImageView
        android:layout_width="@dimen/dp_10"
        android:layout_height="@dimen/dp_12"
        android:src="@drawable/location"
        android:id="@+id/location"
        android:layout_toRightOf="@id/img"
        android:layout_marginLeft="@dimen/dp_17"
        android:layout_below="@id/guanzhu"/>
    <TextView
        android:id="@+id/tv_loaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_12"
        android:layout_toRightOf="@id/location"
        android:layout_below="@id/guanzhu"
        android:text="@string/location"/>
    <ImageView
        android:layout_width="@dimen/dp_12"
        android:layout_height="@dimen/dp_6"
        android:src="@drawable/praise_unselected"
        android:layout_toRightOf="@id/img"
        android:layout_below="@id/location"
        android:id="@+id/img2"
        android:layout_marginTop="@dimen/dp_9"
        android:layout_marginLeft="@dimen/dp_17"/>
    <TextView
        android:id="@+id/des"
        android:layout_width="@dimen/dp_132"
        android:layout_height="@dimen/sp_14"
        android:textSize="@dimen/sp_12"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/app_name"
        android:layout_toRightOf="@id/img2"
        android:layout_below="@id/location"/>
    <ImageView
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_18"
        android:id="@+id/img3"
        android:src="@drawable/follow_unselected"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginRight="@dimen/dp_10"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
